fix: removed the flex shrink on rating__stars to prevent the stars from wrapping

--- a/app/scss/_ratings.scss
+++ b/app/scss/_ratings.scss
@@ -10,8 +10,8 @@
   &__stars {
     @include breakpoint-up(medium) {
       -webkit-box-flex: 0;
-      -ms-flex: 0 1 rem(181px);
-      flex: 0 1 rem(181px);
+      -ms-flex: 0 0 rem(181px);
+      flex: 0 0 rem(181px);
       padding: 0 rem(16px);
     }
   }
